examples/negative/pub_enforcement/violation_constructor/lib.kai
# Negative fixture (#511 / smoke for #510): `type Color` is not
# `pub`, so its variants (`Red`, `Blue`) are unreachable from
# outside the module.

type Color = Red | Blue

pub fn placeholder() : Int = 0
